# vst-design

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.atl/: .skill-registry.cache.json  skill-registry.md
openspec/: config.yaml
openspec/specs/code-snippet-export/: spec.md
openspec/specs/component-library/: spec.md
openspec/specs/design-canvas/: spec.md
openspec/specs/dynamic-component-factory/: spec.md
pluginstudio_runtime/: pluginstudio_runtime.cpp  pluginstudio_runtime.h
pluginstudio_runtime/binding/: ParameterBinder.cpp  ParameterBinder.h
pluginstudio_runtime/components/: DynamicComponent.cpp  DynamicComponent.h  KnobComponent.cpp  KnobComponent.h  OutputComponents.cpp  OutputComponents.h  SwitchComponent.cpp  SwitchComponent.h
pluginstudio_runtime/lookandfeel/: FilmStripLookAndFeel.cpp  FilmStripLookAndFeel.h
pluginstudio_runtime/parser/: DesignData.h  DesignParser.cpp  DesignParser.h
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/canvas/: DesignCanvas.tsx  Grid.tsx  KnobComponent.tsx  LedComponent.tsx  SwitchComponent.tsx  VUMeterComponent.tsx
src/components/: ErrorBanner.tsx
src/filmstrip/: FilmstripPreview.tsx  ImageCache.ts
src/panels/: ExportPanel.tsx  PropertiesPanel.tsx  Toolbar.tsx
src/store/: usePluginStore.ts
src/types/: component.ts  schema.ts
src/utils/: generateSnippets.ts  toPluginDesignJson.ts  valueToFrame.ts
tests/: ComponentTests.cpp  MathTests.cpp  ParserTests.cpp  TestRunner.cpp
(+22 files in other folders)
