[package]
name = "plugin-studio"
version = "0.1.0"
description = "PluginStudio - Analog Audio Plugin UI Designer"
authors = ["you"]
edition = "2021"

[lib]
name = "plugin_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
